--- a/src/modules/mail.html
+++ b/src/modules/mail.html
@@ -202,9 +202,7 @@ body {font-family: 'Chivo', sans-serif;}
             <table border="0" cellpadding="0" cellspacing="0" class="wrapper-mobile" style="text-align:center;">
               <tbody>
                 <tr>
-                <td align="center" bgcolor="#5785ce" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                  <a href="" style="background-color:#5785ce; border:1px solid #333333; border-color:#333333; border-radius:0px; border-width:1px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 30px 12px 30px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Accept Invite</a>
-                </td>
+                <td align="center" bgcolor="#5785ce" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;"><a href="${host}/accept?docid=${data.docid}&user=${data.user}" style="background-color:#5785ce; border:1px solid #333333; border-color:#333333; border-radius:0px; border-width:1px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 30px 12px 30px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Accept Invite</a></td>
                 </tr>
               </tbody>
             </table>
@@ -242,13 +240,40 @@ body {font-family: 'Chivo', sans-serif;}
   </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="ba2cc448-1854-4e31-b50f-551e3101d5b2" data-mc-module-version="2019-10-22">
     <tbody>
       <tr>
-        <td style="padding:40px 30px 40px 30px; line-height:22px; text-align:inherit; background-color:#5785ce;" height="100%" valign="top" bgcolor="#5785ce" role="module-content"><div><div style="font-family: inherit; text-align: center"><span style="color: #ffffff">Need help choosing a plan? Questions about accounts or billing?</span></div>
-<div style="font-family: inherit; text-align: center"><span style="color: #ffffff">We're here to help. Our customer services reps are available 24/7.</span></div>
-<div style="font-family: inherit; text-align: center"><br></div>
-<div style="font-family: inherit; text-align: center"><a href="http://www.student.bth.se/~auro17/editor/"><span style="color: #ffffff"><u><strong>Contact Us</strong></u></span></a></div><div></div></div></td>
+        <td style="padding:40px 30px 40px 30px; line-height:22px; text-align:inherit; background-color:#5785ce;" height="100%" valign="top" bgcolor="#5785ce" role="module-content"><div><div style="font-family: inherit; text-align: center"><span style="color: #ffffff">Don't have an AuroDocs account? Register using the link below. If you already have an account, you can use the Login link to login after accepting the invite, and start editing the document.</span></div><div></div></div></td>
       </tr>
     </tbody>
-  </table><div data-role="module-unsubscribe" class="module" role="module" data-type="unsubscribe" style="color:#444444; font-size:12px; line-height:20px; padding:16px 16px 16px 16px; text-align:Center;" data-muid="4e838cf3-9892-4a6d-94d6-170e474d21e5"><div class="Unsubscribe--addressLine"></div><p style="font-size:12px; line-height:20px;"><a target="_blank" class="Unsubscribe--unsubscribeLink zzzzzzz" href="{{{unsubscribe}}}" style="">Unsubscribe</a> - <a href="{{{unsubscribe_preferences}}}" target="_blank" class="Unsubscribe--unsubscribePreferences" style="">Unsubscribe Preferences</a></p></div></td>
+  </table><table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" role="module" data-type="columns" style="padding:0px 0px 0px 0px;" bgcolor="#5785CE" data-distribution="1,1">
+    <tbody>
+      <tr role="module-content">
+        <td height="100%" valign="top"><table width="290" style="width:290px; border-spacing:0; border-collapse:collapse; margin:0px 10px 0px 0px;" cellpadding="0" cellspacing="0" align="left" border="0" bgcolor="" class="column column-0">
+      <tbody>
+        <tr>
+          <td style="padding:0px;margin:0px;border-spacing:0;"><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="1b7e3d29-0bf1-47eb-99b6-c789ddfd7d62" data-mc-module-version="2019-10-22">
+    <tbody>
+      <tr>
+        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: center"><a href="http://www.student.bth.se/~auro17/editor/#register"><span style="color: #ffffff; font-size: 18px"><u><strong>Register</strong></u></span></a></div><div></div></div></td>
+      </tr>
+    </tbody>
+  </table></td>
+        </tr>
+      </tbody>
+    </table><table width="290" style="width:290px; border-spacing:0; border-collapse:collapse; margin:0px 0px 0px 10px;" cellpadding="0" cellspacing="0" align="left" border="0" bgcolor="" class="column column-1">
+      <tbody>
+        <tr>
+          <td style="padding:0px;margin:0px;border-spacing:0;"><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="63583be3-5274-476c-beaf-ebf8410d7786" data-mc-module-version="2019-10-22">
+    <tbody>
+      <tr>
+        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: center"><a href="http://www.student.bth.se/~auro17/editor/#login"><span style="color: #ffffff; font-size: 18px"><u><strong>Login</strong></u></span></a></div><div></div></div></td>
+      </tr>
+    </tbody>
+  </table></td>
+        </tr>
+      </tbody>
+    </table></td>
+      </tr>
+    </tbody>
+  </table></td>
                                       </tr>
                                     </table>
                                     <!--[if mso]>
